# prompt-to-comic

./: .gitignore  LICENSE  Makefile  README.md  README_INTEGRATION.md  docker-compose.yml  run_app.py
backend/: Dockerfile  Makefile  README_REAL_AI.md  debug_vscode.py  env.example  pyproject.toml  test_real_ai.py  test_simple_ai.py
backend/app/: comic_pipeline.py  config.py  main.py  schemas.py
backend/app/core/entities/: __init__.py
backend/app/utils/: image_gen.py  llm.py
docs/: backend.md  frontend.md  lld_simple.md
frontend/: Dockerfile  Makefile  api.py  app.py  pyproject.toml
